# SoundGenX

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
source/: instrument.cpp  instrument.hpp  main.cpp  master.cpp  master.hpp  noteTable.cpp  noteTable.hpp  outStream.cpp  outStream.hpp  virtualMidiKeyboard.cpp  virtualMidiKeyboard.hpp  voice.hpp
